[package]
name = "pulsehive-anthropic"
version = "2.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Anthropic Claude LLM provider for PulseHive"
readme = "README.md"
homepage = "https://github.com/pulseai-labs/PulseHive"
documentation = "https://docs.rs/pulsehive-anthropic"
keywords = ["anthropic", "claude", "llm", "ai", "agent"]
categories = ["science", "web-programming::http-client"]

[dependencies]
pulsehive-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-core = { workspace = true }
async-trait = { workspace = true }
