[package]
name = "pulsehive-core"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for PulseHive multi-agent SDK"

[dependencies]
pulsehive-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
