[package]
name = "pulsehive-core"
version = "1.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for PulseHive multi-agent SDK"
readme = "README.md"
homepage = "https://github.com/pulsehive/pulsehive"
documentation = "https://docs.rs/pulsehive-core"
keywords = ["ai", "agent", "llm", "traits", "sdk"]
categories = ["science", "asynchronous"]

[dependencies]
pulsehive-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
