[package]
name = "pulsehive-openai"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible LLM provider for PulseHive"

[dependencies]
pulsehive-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
