[package]
name = "pulsehive-openai"
version = "2.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible LLM provider for PulseHive"
readme = "README.md"
homepage = "https://github.com/pulseai-labs/PulseHive"
documentation = "https://docs.rs/pulsehive-openai"
keywords = ["openai", "llm", "gpt", "ollama", "ai"]
categories = ["science", "web-programming::http-client"]

[dependencies]
pulsehive-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
tokio = { workspace = true, features = ["test-util"] }
futures = { workspace = true }
