[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pulsehive"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Python bindings for PulseHive — shared consciousness SDK for multi-agent AI systems"

[tool.maturin]
# Activate extension-module feature only during maturin builds (not cargo build)
features = ["extension-module"]
python-source = "python"
module-name = "pulsehive._pulsehive_py"
