[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pulsehive"
version = "0.3.0b2"
requires-python = ">=3.9"
description = "Python bindings for PulseHive — shared consciousness SDK for multi-agent AI systems"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
authors = [{name = "PulseHive Team"}]
keywords = ["ai", "agents", "multi-agent", "llm", "pulsehive", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/pulseai-labs/PulseHive"
Repository = "https://github.com/pulseai-labs/PulseHive"
"Bug Tracker" = "https://github.com/pulseai-labs/PulseHive/issues"

[tool.maturin]
# Activate extension-module feature only during maturin builds (not cargo build)
features = ["extension-module"]
python-source = "python"
module-name = "pulsehive._pulsehive_py"
