[package]
name = "pulsehive-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime execution engine for PulseHive multi-agent SDK"

[dependencies]
pulsehive-core = { workspace = true }
pulsehive-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
