[package]
name = "pulsehive-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime execution engine for PulseHive multi-agent SDK"

[dependencies]
async-trait = { workspace = true }
pulsehive-core = { workspace = true }
pulsehive-db = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[bench]]
name = "substrate_bench"
harness = false
