[package]
name = "pulsehive-runtime"
version = "2.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime execution engine for PulseHive multi-agent SDK"
readme = "README.md"
homepage = "https://github.com/pulseai-labs/PulseHive"
documentation = "https://docs.rs/pulsehive-runtime"
keywords = ["ai", "agent", "orchestration", "workflow", "runtime"]
categories = ["science", "asynchronous"]

[dependencies]
async-trait = { workspace = true }
pulsehive-core = { workspace = true }
pulsehive-db = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true }
dotenvy = "0.15"
pulsehive-openai = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[bench]]
name = "substrate_bench"
harness = false

[[bench]]
name = "field_bench"
harness = false
