[package]
name = "pulsehive"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Consciousness SDK for Multi-Agent AI Systems"

[features]
default = []
openai = ["dep:pulsehive-openai"]
anthropic = ["dep:pulsehive-anthropic"]

[dependencies]
pulsehive-core = { workspace = true }
pulsehive-runtime = { workspace = true }
pulsehive-openai = { workspace = true, optional = true }
pulsehive-anthropic = { workspace = true, optional = true }
