[package]
name = "pulsehive"
version = "1.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Consciousness SDK for Multi-Agent AI Systems"
readme = "README.md"
homepage = "https://github.com/pulsehive/pulsehive"
documentation = "https://docs.rs/pulsehive"
keywords = ["ai", "agent", "llm", "multi-agent", "consciousness"]
categories = ["science", "asynchronous"]

[features]
default = []
openai = ["dep:pulsehive-openai"]
anthropic = ["dep:pulsehive-anthropic"]

[dependencies]
pulsehive-core = { workspace = true }
pulsehive-runtime = { workspace = true }
pulsehive-openai = { workspace = true, optional = true }
pulsehive-anthropic = { workspace = true, optional = true }
